# nlp-tutorial

./: README.md  notes.md  pyproject.toml
hugging_face/: fill_mask.py  lamda.py  ner.py  question_answering.py  sentences_similarity.py  table_question_answering.py  text_generation.py  text_summarization.py  tmp.ipynb  zero_shot_classification.py
spacy_/: pydictionary_tutorial.ipynb  spacy_.py  spacy_tutorial.ipynb
