[tool.poetry]
name = "nlp"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8.12"
pandas = "^1.4.3"
spacy = "^3.4.1"
wordcloud = "^1.8.2"
nltk = "^3.7"
ipykernel = "^6.15.1"
spacy-streamlit = "^1.0.4"
streamlit = "^1.12.0"
PyDictionary = "^2.0.1"
transformers = {extras = ["torch"], version = "^4.21.1"}
sentence-transformers = "^2.2.2"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
